--- a/solution of exrcises/s4.html
+++ b/solution of exrcises/s4.html
@@ -8,9 +8,7 @@
 <body>
 <ul>
 	<li> apples</li>
-	<li>
-		oranges
-	</li>
+	<li>orange</li>
 	<div>
 		<ol>
 			
@@ -18,9 +16,10 @@
 				<li>orange B</li>
 				<li>orange C</li> 
 			
-		</ol>
+        </ol>
 	</div>
 	<li>Bananas<li>
+
 </ul>
 
 </body>
