--- a/solution of exrcises/s6.html
+++ b/solution of exrcises/s6.html
@@ -24,7 +24,7 @@
 	</table><br><br>
 <table border="solid 3px black">
 	<tr>
-	<td >Row 1-2,Col 1   </td>
+	<td rowspan="2">Row 1-2,Col 1   </td>
 	<td>Row 1,Col 2 </td>
 	<td>Row 1,Col 3 </td>
 	<td>Row 1,Col 4 </td>
