--- a/exercises/css/positioning/exercise2c.html
+++ b/exercises/css/positioning/exercise2c.html
@@ -4,6 +4,15 @@
     <title>Exercise #2c: Positioning</title>
     <style>
         /* add CSS here */
+        #banner{
+     position: absolute;
+     right:20px;
+     right: 20px;
+     height: 120 px;
+     width: 480;
+     border: 1px solid ;
+     background-image:url(images/banner_120x480.gif); 
+        }
     </style>
 </head>
 <body>
