--- a/exercises/css/properties/exercise3.html
+++ b/exercises/css/properties/exercise3.html
@@ -8,17 +8,19 @@
 <p>Code snippet 1:</p>
 <pre>
 h1 {
-    font-family: Verdana;
-    font-size: 1.2em;
+    <span style=" color:blue">font-family</span>: <span style="red">Verdana</span>;
+    <span style=" color:blue">font-size: 1.2em;</span>
+
 }
 </pre>
 
 <p>Code snippet 2:</p>
 <pre>
 p {
-    font-family: Arial;
-    color: blue;
-    text-align: right;
+    <span style=" color:blue">font-family: Arial</span>;
+     <span style="red">color: blue;</span>
+    <span style=" color:blue">text-align: right;</span>
+
 }
 </pre>
 
