--- a/bootstrap/exercise2.html
+++ b/bootstrap/exercise2.html
@@ -52,7 +52,48 @@
         </div>
         <div class="col-md-6">
             <div class="blue"></div>
+             <div >
+    </div>
+    <div class="row">
+                <div class="col-sm-4">
+            <div class="yellow"></div>
         </div>
+        <div class="col-sm-4">
+            <div class="yellow"></div>
+             </div>
+            <div class="col-sm-4">
+            <div class="yellow"></div>
+             </div>
+    </div>
+    <div class="row">
+             <div class="col-lg-6">
+            <div class="green"> </div>
+            </div>
+            <div class="col-sm-6">
+            <div class="lightgreen"></div>
+                </div>
+            </div>
+            <div class="row">
+            <div class="col-md-3">
+            <div class="orange"></div>
+                </div>
+                <div class="col-md-3">
+            <div class="orange"></div>
+                </div>
+                <div class="col-md-3">
+            <div class="orange"></div>
+                </div>
+                <div class="col-md-3">
+            <div class="orange"></div>
+                </div>
+            </div>
+
+<div class="row">
+    <div class="col-lg-12">
+            <div class="grey"></div>
+    
+</div>
+       
     </div>
 
 </div>
